for mem mavl test

--- a/chain33.toml
+++ b/chain33.toml
@@ -147,6 +147,7 @@ enableMVCC=false
 enableMavlPrune=false
 pruneHeight=10000
 enableMemTree=true
+enableMemVal=false
 
 [store.sub.kvmvccmavl]
 enableMVCCIter=false
