--- a/chain33.toml
+++ b/chain33.toml
@@ -58,7 +58,7 @@ dbCache=4
 grpcLogFile="grpc33.log"
 #waitPid 等待seed导入
 waitPid=false
-
+channel=128
 
 [p2p.sub.gossip]
 seeds=[]
@@ -67,9 +67,16 @@ serverStart=true
 innerSeedEnable=true
 useGithub=true
 innerBounds=300
+channel=128
 
 [p2p.sub.dht]
-
+seeds = []
+isSeed=true
+serverStart=true
+innerSeedEnable=false
+useGithub=false
+innerBounds=300
+channel=128
 
 
 [rpc]
